[project]
name = "aare"
version = "0.1.0"
description = "Autonomous Application Resilience Environment"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pyyaml",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
env = "env.aare_env:AAREEnv"